; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_e_des3.c_des_ede3_cfb1_cipher.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_e_des3.c_des_ede3_cfb1_cipher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@EVP_CIPH_FLAG_LENGTH_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i64)* @des_ede3_cfb1_cipher to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @des_ede3_cfb1_cipher(i32* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca [1 x i8], align 1
  %11 = alloca [1 x i8], align 1
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* @EVP_CIPH_FLAG_LENGTH_BITS, align 4
  %14 = call i32 @EVP_CIPHER_CTX_test_flags(i32* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %4
  %17 = load i64, i64* %8, align 8
  %18 = mul i64 %17, 8
  store i64 %18, i64* %8, align 8
  br label %19

19:                                               ; preds = %16, %4
  store i64 0, i64* %9, align 8
  br label %20

20:                                               ; preds = %85, %19
  %21 = load i64, i64* %9, align 8
  %22 = load i64, i64* %8, align 8
  %23 = icmp ult i64 %21, %22
  br i1 %23, label %24, label %88

24:                                               ; preds = %20
  %25 = load i8*, i8** %7, align 8
  %26 = load i64, i64* %9, align 8
  %27 = udiv i64 %26, 8
  %28 = getelementptr inbounds i8, i8* %25, i64 %27
  %29 = load i8, i8* %28, align 1
  %30 = zext i8 %29 to i32
  %31 = load i64, i64* %9, align 8
  %32 = urem i64 %31, 8
  %33 = sub i64 7, %32
  %34 = trunc i64 %33 to i32
  %35 = shl i32 1, %34
  %36 = and i32 %30, %35
  %37 = icmp ne i32 %36, 0
  %38 = zext i1 %37 to i64
  %39 = select i1 %37, i32 128, i32 0
  %40 = trunc i32 %39 to i8
  %41 = getelementptr inbounds [1 x i8], [1 x i8]* %10, i64 0, i64 0
  store i8 %40, i8* %41, align 1
  %42 = getelementptr inbounds [1 x i8], [1 x i8]* %10, i64 0, i64 0
  %43 = getelementptr inbounds [1 x i8], [1 x i8]* %11, i64 0, i64 0
  %44 = load i32*, i32** %5, align 8
  %45 = call %struct.TYPE_2__* @data(i32* %44)
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 2
  %47 = load i32*, i32** %5, align 8
  %48 = call %struct.TYPE_2__* @data(i32* %47)
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 1
  %50 = load i32*, i32** %5, align 8
  %51 = call %struct.TYPE_2__* @data(i32* %50)
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 0
  %53 = load i32*, i32** %5, align 8
  %54 = call i64 @EVP_CIPHER_CTX_iv_noconst(i32* %53)
  %55 = inttoptr i64 %54 to i32*
  %56 = load i32*, i32** %5, align 8
  %57 = call i32 @EVP_CIPHER_CTX_encrypting(i32* %56)
  %58 = call i32 @DES_ede3_cfb_encrypt(i8* %42, i8* %43, i32 1, i32 1, i32* %46, i32* %49, i32* %52, i32* %55, i32 %57)
  %59 = load i8*, i8** %6, align 8
  %60 = load i64, i64* %9, align 8
  %61 = udiv i64 %60, 8
  %62 = getelementptr inbounds i8, i8* %59, i64 %61
  %63 = load i8, i8* %62, align 1
  %64 = zext i8 %63 to i32
  %65 = load i64, i64* %9, align 8
  %66 = urem i64 %65, 8
  %67 = trunc i64 %66 to i32
  %68 = ashr i32 128, %67
  %69 = xor i32 %68, -1
  %70 = and i32 %64, %69
  %71 = getelementptr inbounds [1 x i8], [1 x i8]* %11, i64 0, i64 0
  %72 = load i8, i8* %71, align 1
  %73 = zext i8 %72 to i32
  %74 = and i32 %73, 128
  %75 = load i64, i64* %9, align 8
  %76 = urem i64 %75, 8
  %77 = trunc i64 %76 to i32
  %78 = ashr i32 %74, %77
  %79 = or i32 %70, %78
  %80 = trunc i32 %79 to i8
  %81 = load i8*, i8** %6, align 8
  %82 = load i64, i64* %9, align 8
  %83 = udiv i64 %82, 8
  %84 = getelementptr inbounds i8, i8* %81, i64 %83
  store i8 %80, i8* %84, align 1
  br label %85

85:                                               ; preds = %24
  %86 = load i64, i64* %9, align 8
  %87 = add i64 %86, 1
  store i64 %87, i64* %9, align 8
  br label %20

88:                                               ; preds = %20
  ret i32 1
}

declare dso_local i32 @EVP_CIPHER_CTX_test_flags(i32*, i32) #1

declare dso_local i32 @DES_ede3_cfb_encrypt(i8*, i8*, i32, i32, i32*, i32*, i32*, i32*, i32) #1

declare dso_local %struct.TYPE_2__* @data(i32*) #1

declare dso_local i64 @EVP_CIPHER_CTX_iv_noconst(i32*) #1

declare dso_local i32 @EVP_CIPHER_CTX_encrypting(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
